add: lsp config for nasm complier x86-64 ass

--- a/.asm-lsp.toml
+++ b/.asm-lsp.toml
@@ -1,22 +1,12 @@
 [default_config]
 version = "0.10.0"
-assembler = "nasm"
+assembler = "gas"
 instruction_set = "x86-64"
 
 [default_config.opts]
-compiler = "nasm"
-compile_flags_txt = []
+compiler = "as"
+compile_flags_txt = [
+    "--gstabs",
+]
 diagnostics = true
 default_diagnostics = false
-
-[[project]]
-path = "ch01/hello.asm"
-version = "0.10.0"
-assembler = "nasm"
-instruction_set = "x86-64"
-
-[project.opts]
-compiler = "nasm"
-compile_flags_txt = []
-diagnostics = true
-default_diagnostics = true
